<resources>
    <string name="app_name">开发者新闻</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="click_login">点击登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--MainActivity Tab-->
    <string name="tab_app">应用</string>
    <string name="tab_game">游戏</string>
    <string name="tab_explorer">发现</string>

    <string name="Complete">打开</string>
    <string name="Error">重试</string>
    <string name="Download">下载</string>
    <string name="appTop">应用排行</string>
    <string name="appClasses">应用分类</string>

    <!--LoginActivity-->
    <string name="login_hint_name">请输入手机号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login">登陆</string>
    <string name="login_error_name">用户名不能为空</string>
    <string name="login_error_password">密码不能为空</string>
    <string name="loading">加载中...</string>
    <string name="network_error">网络异常，请稍后重试</string>

    <string name="action_resource">干货</string>
    <string name="action_collection">收藏</string>
    <string name="action_girl">妹纸</string>
    <string name="action_video">休息视频</string>
    <string name="action_settings">设置</string>
    <string name="gank_Android">Android</string>
    <string name="gank_iOS">iOS</string>
    <string name="gank_FrontEnd">前端</string>
    <string name="gank_recommend">瞎推荐</string>
    <string name="gank_ExtendResource">拓展资源</string>
    <string name="gank_App">App</string>
    <string name="action_hot">热门</string>
    <string name="action_sort">排序</string>
    <string name="gank">干货</string>
    <string name="hot">热门</string>
    <string name="network_not_conntected">网络未连接，前往设置？</string>
    <string name="tips">温馨提示</string>
    <string name="share">分享</string>
    <string name="gank_Girl">福利</string>
    <string name="current_version">当前版本</string>
    <string name="clear_cache">清理缓存</string>
    <string name="contract_author">联系作者</string>


</resources>
