<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_feature"
        android:checkableBehavior="single">
        <!--必须设置id，不然不会出现分割线-->
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_grey600_24dp"
            android:title="@string/action_resource" />
        <item
            android:id="@+id/nav_hot"
            android:icon="@drawable/ic_bookmark_grey600_24dp"
            android:title="@string/action_hot" />
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_bookmark_grey600_24dp"
            android:title="@string/action_collection" />
        <item
            android:id="@+id/nav_girl"
            android:icon="@drawable/ic_bookmark_grey600_24dp"
            android:title="@string/action_girl" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_bookmark_grey600_24dp"
            android:title="@string/action_video" />
    </group>
    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_grey600_24dp"
            android:title="@string/action_settings" />
    </group>

</menu>