<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myxh.developernews.ui.activity.WebActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/settings_appbar"
        android:fitsSystemWindows="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null">

        <android.support.v7.widget.Toolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            android:paddingTop="@dimen/toolbar_padding_top"
            android:background="@color/colorAccent"
            app:theme="@style/Theme.AppCompat.Light.DarkActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_refresh_layout_bg_color"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/settings_cache_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_layout_height"
                android:paddingLeft="@dimen/settings_item_paddingLR"
                android:paddingRight="@dimen/settings_item_paddingLR"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_cache"
                    android:textSize="@dimen/settings_item_title_size"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/settings_tv_cacheSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/settings_item_subtitle_size"
                    tools:text="12MB"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background_gray"/>

            <RelativeLayout
                android:id="@+id/settings_version_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_layout_height"
                android:paddingLeft="@dimen/settings_item_paddingLR"
                android:paddingRight="@dimen/settings_item_paddingLR"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_version"
                    android:textSize="@dimen/settings_item_title_size"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/settings_tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/settings_item_subtitle_size"
                    android:text="V1.0"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background_gray"/>

            <RelativeLayout
                android:id="@+id/settings_contract_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_layout_height"
                android:paddingLeft="@dimen/settings_item_paddingLR"
                android:paddingRight="@dimen/settings_item_paddingLR"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contract_author"
                    android:textSize="@dimen/settings_item_title_size"
                    android:textColor="@android:color/black"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background_gray"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>